force-app/main/default/objects/QCC_SOQL_Setting__mdt/QCC_SOQL_Setting__mdt.object-meta.xml
<CustomObject>
    <label>QCC SOQL Setting</label>
    <pluralLabel>QCC SOQL Settings</pluralLabel>
</CustomObject>