force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>The batch size that will be used by the scheduled batch process</description>
    <inlineHelpText>The batch size that will be used by the scheduled batch process</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>