force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <description>The condition logic to be appended as WHERE statement to the Query String. This is used by the QueryLocator of the batch process.
NOTE: The values will be mapped to the QCC SOQL Filter Settings to replace with the actual conditions</description>
    <inlineHelpText>The condition logic to be appended as WHERE statement to the Query String. This is used by the QueryLocator of the batch process.
NOTE: The values will be mapped to the QCC SOQL Filter Settings to replace with the actual conditions</inlineHelpText>
    <label>Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>