force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <description>Groups records according to its purpose and where it is used. Referenced by apex class to retrieve the appropriate records based on the functionality being implemented.</description>
    <inlineHelpText>Groups records according to its purpose and where it is used. Referenced by apex class to retrieve the appropriate records based on the functionality being implemented.</inlineHelpText>
    <label>Module Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>