force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Query_String__c.field-meta.xml
<CustomField>
    <fullName>Query_String__c</fullName>
    <description>String of the SELECT statement including all the fields that needs to be retrieved. This is used by the QueryLocator of the batch process.</description>
    <inlineHelpText>String of the SELECT statement including all the fields that needs to be retrieved. This is used by the QueryLocator of the batch process.</inlineHelpText>
    <label>Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>