force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the target object on which records will be created by the scheduled batch process</description>
    <inlineHelpText>API name of the target object on which records will be created by the scheduled batch process</inlineHelpText>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>