force-app/main/default/objects/QCC_SOQL_Setting__mdt/fields/Target_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Type__c</fullName>
    <description>Name of the record type to be used when the target object records are created by the scheduled batch process</description>
    <inlineHelpText>Name of the record type to be used when the target object records are created by the scheduled batch process</inlineHelpText>
    <label>Target Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>