force-app/main/default/objects/QCC_SOQL_Setting__mdt/listViews/All_SOQL_Settings.listView-meta.xml
<ListView>
    <fullName>All_SOQL_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Module_Name__c</columns>
    <columns>Query_String__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Filter_Condition__c</columns>
    <columns>Target_Record_Type__c</columns>
    <columns>Batch_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SOQL Settings</label>
</ListView>